--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 body {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  overflow: hidden;
+  font-family: "Ubuntu", sans-serif;
   margin: 0;
 }
 
@@ -11,33 +18,32 @@ input {
   margin-bottom: 1rem;
 }
 
-header {
+/* header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
-  background: #000;
-}
+} */
 
-#logo {
+/* #logo {
   font-size: 1.5rem;
   font-weight: bold;
   text-decoration: none;
   color: #FFF;
-}
+} */
 
-nav ul {
+/* nav ul {
   display: flex;
-  gap: 1rem;
+  gap: 10 rem;
   padding: 0;
   margin: 0;
   list-style: none;
-}
+} */
 
-nav a {
+/* nav a {
   display: block;
-  color: #FFF;
-}
+  color: #000000;
+} */
 
 form {
   padding: 1rem;
@@ -47,8 +53,32 @@ form {
 }
 
 /* automatically added by NavLink component */
-.active {
+/* .active {
   color: #EEBC32;
   font-weight: bold;
   font-style: italic;
+} */
+
+@keyframes pulse {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.1);
+  }
+  100% {
+      transform: scale(1);
+  }
 }
+
+.pulse {
+  animation: pulse 10s infinite;
+}
+
+.Dark-Green { color: #6A7349; }
+.Light-green { color: #D9D3B8; }
+.Yellow { color: #F2B66D; }
+.Bright-Orange { color: #F48437; }
+.Dark-Orange { color: #F25922; }
+.Black { color: #282828}
+.White { color: #F8F7F4}
