--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,12 +4,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: "Ubuntu", sans-serif;
   margin: 0;
   background-color: #F8F7F4;
+  scroll-behavior: smooth;
 }
+
 
 input, label {
   display: block;
@@ -83,3 +86,28 @@ form {
 .Dark-Orange { color: #F25922; }
 .Black { color: #282828}
 .White { color: #F8F7F4}
+
+
+.ubuntu-light-italic {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+}
+
+
+.word {
+  animation: fadeIn 0.2s ease-in-out;
+}
+
+
