--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -110,4 +110,20 @@ form {
   animation: fadeIn 0.2s ease-in-out;
 }
 
-
+.page-enter {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+.page-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 300ms, transform 300ms;
+}
+.page-exit {
+  opacity: 1;
+}
+.page-exit-active {
+  opacity: 0;
+  transform: translateX(100%);
+  transition: opacity 300ms, transform 300ms;
+}
