--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -8,11 +8,12 @@ body {
   overflow-x: hidden;
   font-family: "Ubuntu", sans-serif;
   margin: 0;
-  background-color: #F8F7F4;
+  background-color: #f8f7f4;
   scroll-behavior: smooth;
 }
 
-input, label {
+input,
+label {
   display: block;
 }
 
@@ -49,7 +50,7 @@ input {
 
 form {
   padding: 1rem;
-  border: 1px solid #CCC;
+  border: 1px solid #ccc;
   width: 15rem;
   margin: 1rem auto;
 }
@@ -63,13 +64,13 @@ form {
 
 @keyframes pulse {
   0% {
-      transform: scale(1);
+    transform: scale(1);
   }
   50% {
-      transform: scale(1.1);
+    transform: scale(1.1);
   }
   100% {
-      transform: scale(1);
+    transform: scale(1);
   }
 }
 
@@ -77,14 +78,27 @@ form {
   animation: pulse 10s infinite;
 }
 
-.Dark-Green { color: #6A7349; }
-.Light-green { color: #D9D3B8; }
-.Yellow { color: #F2B66D; }
-.Bright-Orange { color: #F48437; }
-.Dark-Orange { color: #F25922; }
-.Black { color: #282828}
-.White { color: #F8F7F4}
-
+.Dark-Green {
+  color: #6a7349;
+}
+.Light-green {
+  color: #d9d3b8;
+}
+.Yellow {
+  color: #f2b66d;
+}
+.Bright-Orange {
+  color: #f48437;
+}
+.Dark-Orange {
+  color: #f25922;
+}
+.Black {
+  color: #282828;
+}
+.White {
+  color: #f8f7f4;
+}
 
 .ubuntu-light-italic {
   font-family: "Ubuntu", sans-serif;
@@ -93,16 +107,18 @@ form {
 }
 
 @keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-
 
 .fade-in {
   opacity: 0;
   animation: fadeIn 1s forwards;
 }
-
 
 .word {
   animation: fadeIn 0.2s ease-in-out;
@@ -124,4 +140,84 @@ form {
   opacity: 0;
   transform: translateX(100%);
   transition: opacity 300ms, transform 300ms;
+}
+
+.interactive-text {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+  user-select: none;
+}
+
+.interactive-text:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
+}
+
+.interactive-text:active {
+  background-color: white;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.notification-button {
+  transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1),
+    box-shadow 0.3s ease;
+  border: none; /* Remove default border styling */
+  outline: none; /* Remove focus outline */
+  cursor: pointer;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  margin: 1.5rem;
+  background-color: #f2b66d;
+  border-radius: 50%;
+  padding: 0.5rem;
+  box-shadow: none; /* No shadow initially */
+}
+
+.notification-button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 15px rgba(224, 222, 218, 0.6);
+  /* background-color: #282828; */
+}
+
+.notification-button:active {
+  background-color: white; /* Background color on click */
+}
+
+@keyframes bounce-back {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+}
+
+.notification-button:not(:hover) {
+  animation: bounce-back 0.5s ease-out;
+}
+
+.button-bulge:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1),
+    box-shadow 0.3s ease;
+}
+.button-bulge:not(:hover) {
+  animation: bounce-back 0.5s ease-out;
 }
