--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
 
 body {
   overflow-x: hidden;
@@ -10,7 +11,13 @@ body {
   margin: 0;
   background-color: #f8f7f4;
   scroll-behavior: smooth;
+
+  @apply dark:bg-black;
 }
+
+
+
+
 
 input,
 label {
@@ -21,46 +28,12 @@ input {
   margin-bottom: 1rem;
 }
 
-/* header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5rem 1rem;
-} */
-
-/* #logo {
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-decoration: none;
-  color: #FFF;
-} */
-
-/* nav ul {
-  display: flex;
-  gap: 10 rem;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-} */
-
-/* nav a {
-  display: block;
-  color: #000000;
-} */
-
 form {
   padding: 1rem;
   border: 1px solid #ccc;
   width: 15rem;
   margin: 1rem auto;
 }
-
-/* automatically added by NavLink component */
-/* .active {
-  color: #EEBC32;
-  font-weight: bold;
-  font-style: italic;
-} */
 
 @keyframes pulse {
   0% {
@@ -222,19 +195,19 @@ form {
   animation: bounce-back 0.5s ease-out;
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
   border: none;
   width: 5px;
   opacity: 50%;
 }
 
-::-webkit-scrollbar{
-background: none;
-width: 5px;
-opacity: 50%;
+::-webkit-scrollbar {
+  background: none;
+  width: 5px;
+  opacity: 50%;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background: white;
   width: 5px;
   border-radius: 10px;
@@ -243,12 +216,28 @@ opacity: 50%;
 
 @layer components {
   .fade-top-edge::before {
-    content: '';
+    content: "";
     top: 0;
     left: 0;
     right: 0;
-    height: 20px; 
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+    height: 20px;
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0) 0%,
+      #ffffff 100%
+    );
     pointer-events: none;
   }
+}
+
+.hidden {
+  opacity: 0;
+  transform: translateX(100%);
+  transition: opacity 0.5s, transform 0.5s;
+}
+
+.visible {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 0.5s, transform 0.5s;
 }
